--- a/src/pages/Page404/index.less
+++ b/src/pages/Page404/index.less
@@ -1,12 +1,7 @@
 .page404-wrap  {
     height: calc(60vh);
     text-align: center;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+    line-height: calc(60vh);
     font-size: 20px;
     background-color: #ffffff;
 }
