--- a/src/components/SideNav/index.less
+++ b/src/components/SideNav/index.less
@@ -1,17 +1,19 @@
-.logo {
-    line-height: 90px;
-    background: #002140;
-    text-align: center;
-    img {
-        height: 35px;
-        vertical-align: middle;
-        margin-right: 10px;
-    }
-    h1 {
-        font-size: 20px;
-        color: #fff;
-        vertical-align: middle;
-        margin: 0;
-        display: inline-block;
+.side-nav {
+    .logo {
+        line-height: 90px;
+        background: #002140;
+        text-align: center;
+        img {
+            height: 35px;
+            vertical-align: middle;
+            margin-right: 10px;
+        }
+        h1 {
+            font-size: 20px;
+            color: #fff;
+            vertical-align: middle;
+            margin: 0;
+            display: inline-block;
+        }
     }
 }
